--- a/tools.css
+++ b/tools.css
@@ -5,6 +5,9 @@
     gap: 20px;
     margin: auto 15%;
 }
+.dark .tools-container {
+    background-color: #333;
+}
 
 .tool-item {
     display: flex;
@@ -15,6 +18,10 @@
     border-radius: 8px;
     width: 120px;
     transition: transform 0.3s ease;
+}
+
+.dark .tool-item {
+    background-color: #494949;
 }
 
 .tool-item:hover {
